# Atlas-core

./: Cargo.toml  LICENSE  README.md
.github/: rust.yml
src/: lib.rs  test.txt
src/interfaces/: mod.rs
src/interfaces/error/: mod.rs
src/interfaces/lexer/: lexer_errors.rs  mod.rs  token.rs
src/interfaces/parser/: mod.rs  nodes.rs  parser_errors.rs
src/interfaces/pass/: mod.rs  pass_error.rs
src/interfaces/runtime/: mod.rs  runtime_errors.rs  value.rs
src/lexer/: lexer_state.rs  mod.rs  old_mod.rs  test_lexer.rs
src/tests/: mod.rs
src/utils/: case.rs  mod.rs  span.rs
