[package]
name = "atlas-core"
version = "0.6.0-beta5"
authors = ["Gipson62 <j.h.gipson62@gmail.com>"]
description = "(In Alpha) Embeddable functional programming language"
keywords = ["language", "tool", "programming-language", "language-agnostic"]
categories = ["development-tools", "development-tools::build-utils"]
license = "MIT"
edition = "2021"
homepage = "https://redgear.tk/"
repository = "https://github.com/RedGear-Studio/atlas-core"

[lib]
name = "atlas_core"

[dependencies]
heck = "0.5.0"
internment = "0.8.4"
